fixes gap

--- a/client/src/styles/SubCategoria.module.scss
+++ b/client/src/styles/SubCategoria.module.scss
@@ -3,14 +3,11 @@
   padding: 1rem;
   border-radius: 25px;
   margin-inline: 1rem;
-  margin-bottom: 1rem;
 }
 
 .selectorCerrado {
   border-radius: 100px;
-  margin-top: 2rem;
   background-color: #fafafa;
-  margin-bottom: 1rem;
 }
 
 .contTituloIcono {
@@ -28,7 +25,6 @@
 
   .icono {
     font-size: 18px;
-    transition: all 0.3s ease-in-out;
   }
 
   .iconoRotate {
